<resources>
    <string name="app_name">MobileTopUp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_your_phone_number">Please Enter Your Phone Number</string>
    <string name="proceed">Proceed</string>
    <string name="loading">loading</string>
    <string name="phone_number_hint">+959 xxxxxxxxx or 09 xxxxxxxxx</string>
    <string name="data_plans">Data Plans</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="provider_icon">Provider Icon</string>
    <string name="atom_myanmar">Atom Myanmar</string>
    <string name="phnumber">09xxxxxxxxx</string>
    <string name="done">Done</string>
    <string name="transaction_id">Transaction ID :</string>
    <string name="provider">Provider :</string>
    <string name="data_plan">Data Plan</string>
    <string name="amount">Amount:</string>
    <string name="transaction_successful">Transaction Successful!</string>
    <string name="proceed_to_recharge">Proceed To Recharge</string>
    <string name="transaction_history">Transaction History</string>
    <string name="transaction_type">Transaction Type :</string>
    <string name="date">Date :</string>
    <string name="no_transactions_found">No transactions found</string>
    <string name="search_transactions">Search transactions</string>
    <string name="success">Success</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="dismiss">dismiss</string>
    <string name="select">Select</string>
    <string name="welcome">Welcome</string>
    <string name="clear">Clear</string>
    <string name="filter_by_date">Filter by Date</string>
    <string name="date_filter_icon">Date filter icon</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="buy_pack">Buy pack</string>
</resources>