<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="?attr/colorSurfaceContainerHigh"
        app:cardCornerRadius="28dp"
        app:cardElevation="0dp">

        <ImageButton
            android:id="@+id/btnDismiss"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/dismiss"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/baseline_clear_24"
            android:stateListAnimator="@xml/button_animation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_payment"
                android:textAppearance="?attr/textAppearanceHeadlineMedium"
                android:textColor="?android:attr/textColorPrimary" />


            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivProviderIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/provider_icon"
                    android:src="@drawable/atom_logo"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium" />

                <TextView
                    android:id="@+id/tvProviderName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="@string/atom_myanmar"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:textColor="?android:attr/textColorPrimary" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvDataPlan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="8 GBs for 7 Days"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="2500 MMK"
                android:textAppearance="?attr/textAppearanceHeadlineMedium"
                android:textColor="?attr/colorPrimary" />

            <TextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/phnumber"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirmPayment"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="16dp"
                android:stateListAnimator="@xml/button_animation"
                android:text="@string/confirm_payment" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="?attr/colorPrimary"
        app:trackColor="?attr/colorSurfaceVariant" />
</androidx.coordinatorlayout.widget.CoordinatorLayout> 